Fix show more in catalog and filter show all on mobile

--- a/src/blocks/components/filter/filter.scss
+++ b/src/blocks/components/filter/filter.scss
@@ -161,12 +161,12 @@
                 }
             }
 
-            .show-all & {
-                display: flex;
-            }
-
             &:nth-child(n + 5) {
                 display: none;
+            }
+
+            .show-all &:nth-child(n + 5) {
+                display: flex;
             }
         }
 
